--- a/hw6/css/style.css
+++ b/hw6/css/style.css
@@ -13,6 +13,7 @@
         }
         
         p,
+        .block,
         footer {
             font-family: 'Roboto Condensed', sans-serif;
         }
@@ -57,6 +58,9 @@
             border: 1px solid black;
             border-radius: 3px;
             margin: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         
         .right {
@@ -251,8 +255,8 @@
         
         .forsixth1 {
             background-color: rgb(255, 238, 0);
-            width: 11px;
-            height: 60px;
+            width: 13px;
+            height: 70px;
             border: 1px solid black;
             border-radius: 3px;
             margin: 5px;
@@ -269,7 +273,7 @@
         
         .forsixth3 {
             background-color: rgb(255, 238, 0);
-            width: 5px;
+            width: 15px;
             height: 15px;
             border: 1px solid black;
             border-radius: 3px;
@@ -343,6 +347,7 @@
             border: 1px solid black;
             border-radius: 3px;
             margin: 5px;
+            font-size: 10px;
         }
         
         .order {
